# model-viewer-2

./: .gitignore  CMakeLists.txt  README.md  build-debug.bat  build.bat  build.sh  model-viewer.sln  model-viewer.vcxproj  model-viewer.vcxproj.filters
res/models/: Lantern_01.blend  sofa_02.blend
res/shaders/basic/: basic.frag
res/shaders/cubemap/: cubemap.frag  cubemap.vert
res/shaders/debug/: debug.frag  debug.vert
res/shaders/lightcube/: lightcube.frag
res/shaders/lighting/: lighting.frag  lighting.vert
res/shaders/textured/: textured.frag  textured.vert
src/: main.cpp
src/AssetManagement/: asset_loader.cpp  asset_loader.h  shader.cpp  shader.h  stb_image.c  texture.h
src/Camera/: camera.h
src/Display/: display.cpp  display.h
src/Math/: constants.h  mat4.cpp  mat4.h  math.h  transform.cpp  transform.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/Mesh/: mesh.cpp  mesh.h  model.h
src/String/: string.cpp  string.h
